feat and style(section-four): HTML code and style.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,76 @@
         </div>
     </section>
     <!-- End Section-three -->
+    <!-- Section-four -->
+    <section class="section-four">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-lg-6 mx-auto">
+                    <div class="heading d-flex flex-column justify-content-center align-items-center text-center gap-4">
+                        <h2 class="h2 title">Work Process</h2>
+                        <p>Aenean nec tempor metus. Maecenas ligula dolor, commodo in imperdiet interdum, vehicula ut ex. Donec ante diam.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Get Ideas</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Sketch Up</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Discuss</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Revise</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Approve</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-6 col-12">
+                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                        <i>
+                            <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
+                        </i>
+                        <strong class="d-block">Launch</strong>
+                        <span>Godard pabst prism fam cliche.</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-four -->
 
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
