--- a/index.html
+++ b/index.html
@@ -220,6 +220,58 @@
         </div>
     </section>
     <!-- End Section-four -->
+    <!-- Section-five -->
+    <section class="section-five">
+        <div class="container">
+            <div class="row row-1 mb-5">
+                <div class="col-lg-6 mx-auto">
+                    <div class="heading d-flex flex-column justify-content-center align-items-center text-center gap-3">
+                        <h2 class="h2">What do they say?</h2>
+                        <p>Donec tempus, sem non rutrum imperdiet, lectus orci fringilla nulla, at accumsan elit eros a turpis. Ut sagittis lectus libero.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-2">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                        <div class="image">
+                            <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
+                        </div>
+                        <p>Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio.</p>
+                        <div class="role text-center">
+                            <h4>Catherine Soft</h4>
+                            <span>Managing Director</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                        <div class="image">
+                            <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
+                        </div>
+                        <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                        <div class="role text-center">
+                            <h4>Kelvin Wood</h4>
+                            <span>Digital Marketer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                        <div class="image">
+                            <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
+                        </div>
+                        <p>Quisque diam odio, maximus ac consectetur eu, auctor non lorem. Cras quis est non ante ultrices molestie. Ut vehicula et diam at aliquam.</p>
+                        <div class="role text-center">
+                            <h4>David Martin</h4>
+                            <span>Website Manager</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-five -->
 
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
