--- a/index.html
+++ b/index.html
@@ -272,9 +272,77 @@
         </div>
     </section>
     <!-- End Section-five -->
-
+    <!-- Section-six -->
+    <section class="section-six">
+        <div class="container">
+            <div class="row row-1">
+                <div class="col-lg-6 mx-auto mb-5">
+                    <div class="heading d-flex flex-column justify-content-center align-items-center text-center gap-3">
+                        <h2 class="h2">Pricing Plans</h2>
+                        <p>Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis arcu elementum, quis congue risus volutpat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-2">
+                <div class="block col-lg-4 col-md-6 col-12">
+                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                        <h2>Starter</h2>
+                        <div class="price d-flex flex-column justify-content-center align-items-center">
+                            <h1 class="p-0 m-0">$ 14.50</h1>
+                            <p class="p-0 m-0">monthly</p>
+                        </div>
+                        <ul class="list list-unstyled text-center d-flex flex-column align-items-center gap-3 my-3">
+                            <li>60 GB space</li>
+                            <li>600 GB transfer</li>
+                            <li>Pro Design Panel</li>
+                            <li class="line-through">15-minute support</li>
+                            <li class="line-through">Unlimited Emails</li>
+                            <li class="line-through">24/7 Security</li>
+                        </ul>
+                        <div class="button-one">Purchase now</div>
+                    </div>
+                </div>
+                <div class="block col-lg-4 col-md-6 col-12">
+                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                        <h2>Premium</h2>
+                        <div class="price d-flex flex-column justify-content-center align-items-center">
+                            <h1 class="p-0 m-0">$ 21.50</h1>
+                            <p class="p-0 m-0">monthly</p>
+                        </div>
+                        <ul class="list list-unstyled text-center d-flex flex-column align-items-center gap-3 my-3">
+                            <li>120 GB space</li>
+                            <li>1200 GB transfer</li>
+                            <li>Pro Design Panel</li>
+                            <li>15-minute support</li>
+                            <li class="line-through">Unlimited Emails</li>
+                            <li class="line-through">24/7 Security</li>
+                        </ul>
+                        <div class="button-one">Purchase now</div>
+                    </div>
+                </div>
+                <div class="block col-lg-4 col-md-6 col-12">
+                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                        <h2>Advanced</h2>
+                        <div class="price d-flex flex-column justify-content-center align-items-center">
+                            <h1 class="p-0 m-0">$ 42.00</h1>
+                            <p class="p-0 m-0">monthly</p>
+                        </div>
+                        <ul class="list list-unstyled text-center d-flex flex-column align-items-center gap-3 my-3">
+                            <li>250 GB space</li>
+                            <li>5000 GB transfer</li>
+                            <li>Pro Design Panel</li>
+                            <li>15-minute support</li>
+                            <li>Unlimited Emails</li>
+                            <li>24/7 Security</li>
+                        </ul>
+                        <div class="button-one">Purchase now</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-six -->
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
 </body>
 </html>
