feat and style(section-seven): HTML code and style.

--- a/index.html
+++ b/index.html
@@ -342,6 +342,38 @@
         </div>
     </section>
     <!-- End Section-six -->
+    <!-- Section-seven -->
+    <section class="section-seven">
+        <div class="container">
+            <div class="row">
+                <div class="item col-lg-3 col-md-6 col-sm-12">
+                    <div class="inner-box">
+                        <h1 class="h1">163</h1>
+                        <span>Projects</span>
+                    </div>
+                </div>
+                <div class="item col-lg-3 col-md-6 col-sm-12">
+                    <div class="inner-box">
+                        <h1 class="h1">63</h1>
+                        <span>Happy Clients</span>
+                    </div>
+                </div>
+                <div class="item col-lg-3 col-md-6 col-sm-12">
+                    <div class="inner-box">
+                        <h1 class="h1">18</h1>
+                        <span>Award Wins</span>
+                    </div>
+                </div>
+                <div class="item col-lg-3 col-md-6 col-sm-12">
+                    <div class="inner-box">
+                        <h1 class="h1">27</h1>
+                        <span>Countries</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-seven -->
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
