feat and style(section-eight): HTML code and style.

--- a/index.html
+++ b/index.html
@@ -374,6 +374,52 @@
         </div>
     </section>
     <!-- End Section-seven -->
+    <!-- Section-eight -->
+    <section class="section-eight">
+        <div class="container">
+            <div class="row row-1 mb-5">
+                <div class="col-lg-6 mx-auto">
+                    <div class="heading d-flex flex-column justify-content-center align-items-center text-center gap-3">
+                        <h2 class="h2">Blog Entries</h2>
+                        <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-2">
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                        <div class="image">
+                            <img src="./assets/imgs/blog-item-01.png" alt="blog-item-01">
+                        </div>
+                        <h5 class="h5">Vivamus ac vehicula dui</h5>
+                        <p>Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.</p>
+                        <div class="button-two">Read more</div>
+                    </div>
+                </div>
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                        <div class="image">
+                            <img src="./assets/imgs/blog-item-02.png" alt="blog-item-02">
+                        </div>
+                        <h5 class="h5">Phasellus convallis augue</h5>
+                        <p>Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac. Vestibulum finibus urna ut velit venenatis, vel ultrices sapien mattis.</p>
+                        <div class="button-two">Read more</div>
+                    </div>
+                </div>
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                        <div class="image">
+                            <img src="./assets/imgs/blog-item-03.png" alt="blog-item-03">
+                        </div>
+                        <h5 class="h5">Nam gravida purus non</h5>
+                        <p>Maecenas eu erat vitae dui convallis consequat vel gravida nulla. Vestibulum finibus euismod odio, ut tempus enim varius eu.</p>
+                        <div class="button-two">Read more</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-eight -->
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
