--- a/index.html
+++ b/index.html
@@ -420,6 +420,57 @@
         </div>
     </section>
     <!-- End Section-eight -->
+    <!-- Section-nine -->
+    <section class="section-nine">
+        <div class="container">
+            <div class="row row-1 mb-5">
+                <div class="col-lg-6 mx-auto">
+                    <div class="heading d-flex flex-column justify-content-center align-items-center text-center">
+                        <h1 class="h2">Talk To Us</h1>
+                        <p>Maecenas pellentesque ante faucibus lectus vulputate sollicitudin. Cras feugiat hendrerit semper.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-2">
+                <div class="col-lg-4">
+                    <div class="notice d-flex flex-column justify-content-between gap-4">
+                        <h4 class="h4">keep in touch</h4>
+                        <p>110-220 Quisque diam odio, maximus ac consectetur eu, 10260 auctor non lorem</p>
+                        <p>You are NOT allowed to re-distribute Softy Pinko template on any template collection websites. Thank you.</p>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="contact-form">
+                        <form action="#" class="form">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-12 col-12">
+                                    <fieldset>
+                                        <input type="text" id="name" placeholder="Full Name" class="form-control">
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-12">
+                                    <fieldset>
+                                        <input type="email" id="email" placeholder="E-Mail Address" class="form-control">
+                                    </fieldset>
+                                </div>
+                                <div class="col-12">
+                                    <fieldset>
+                                        <textarea name="message" id="message" placeholder="Your Message" rows="6" class="form-control"></textarea>
+                                    </fieldset>
+                                </div>
+                                <div class="col-12">
+                                    <fieldset>
+                                        <button type="submit" class="button-two">send message</button>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section-nine -->
     <!-- Link JS bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
