style(website): responsive layout.

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-expand-md bg-white justify-content-between rounded-pill">
-                        <a href="/" class="navbar-brand ps-3">
+                    <nav class="navbar navbar-expand-lg bg-white justify-content-between rounded-pill">
+                        <a href="/" class="navbar-brand ps-4">
                             <img src="./assets/imgs/P-logo.png" alt="Logo" width="60"> TTHPHAT
                         </a>
-                        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-expanded="false" aria-controls="navbarContent" aria-label="Toggler Navigation">
+                        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-expanded="false" aria-controls="navbarContent" aria-label="Toggler Navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse flex-grow-0" id="navbarContent">
                             <ul class="navbar-nav">
-                                <li class="nav-item ">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1 ">
                                     <a href="#" class="nav-link active">Home</a>
                                 </li> 
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">About</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">Work Process</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">Testimonials</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">Pricing Table</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">Blog Entries</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item text-center px-lg-3 px-md-2 px-1">
                                     <a href="#" class="nav-link">Contact Us</a>
                                 </li>
                             </ul>
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row ">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
+                    <div class="inner-box mb-4 rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
                         <div class="image rounded-circle d-flex justify-content-center align-items-center">
                             <img src="./assets/imgs/featured-item-01.png" alt="icon">
                         </div>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
+                    <div class="inner-box mb-4 rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
                         <div class="image rounded-circle d-flex justify-content-center align-items-center">
                             <img src="./assets/imgs/featured-item-01.png" alt="icon">
                         </div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
+                    <div class="inner-box mb-4 rounded-3 d-flex flex-column justify-content-center align-items-center text-center p-4 gap-3">
                         <div class="image rounded-circle d-flex justify-content-center align-items-center">
                             <img src="./assets/imgs/featured-item-01.png" alt="icon">
                         </div>
@@ -112,13 +112,13 @@
     <section class="section-two">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12 col-sm-12">
+                <div class="col-lg-5 col-md-12 col-sm-12 order-1">
                     <div class="image d-flex justify-content-center align-items-center">
                         <img src="./assets/imgs/left-image.png" alt="left-image">
                     </div>
                 </div>
-                <div class="col-1"></div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-lg-1 col-12 order-2 py-5 py-lg-0"></div>
+                <div class="col-lg-6 col-md-12 col-sm-12 order-3">
                     <div class="content d-flex flex-column gap-3">
                         <h2 class="heading h2">Let’s discuss about you project</h2>
                         <p>Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue blandit, at finibus leo efficitur. Nam gravida purus non sapien auctor, ut aliquam magna ullamcorper.</p>
@@ -137,13 +137,13 @@
     <section class="section-three">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12 col-sm-12 order-1">
+                <div class="col-lg-5 col-md-12 col-sm-12 order-3">
                     <div class="image d-flex justify-content-center align-items-center">
                         <img src="./assets/imgs/right-image.png" alt="right-image">
                     </div>
                 </div>
-                <div class="col-1"></div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-1 order-2 py-5 py-lg-0"></div>
+                <div class="col-lg-6 col-md-12 col-sm-12 order-1">
                     <div class="content d-flex flex-column gap-3">
                         <h2 class="heading h2">Let’s discuss about you project</h2>
                         <p>Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue blandit, at finibus leo efficitur. Nam gravida purus non sapien auctor, ut aliquam magna ullamcorper.</p>
@@ -166,7 +166,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -175,7 +175,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -184,7 +184,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -193,7 +193,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -202,7 +202,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -211,7 +211,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6 col-12">
-                    <a href="#" class="item position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
+                    <a href="#" class="item mb-4 position-relative bg-white d-flex flex-column gap-2 p-5 rounded-4 text-center text-decoration-none">
                         <i>
                             <img src="./assets/imgs/work-process-item-01.png" alt="icon process">
                         </i>
@@ -236,7 +236,7 @@
             </div>
             <div class="row row-2">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                    <div class="inner-box mb-4 d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
                         <div class="image">
                             <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
                         </div>
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                    <div class="inner-box mb-4 d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
                         <div class="image">
                             <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
                         </div>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="inner-box d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
+                    <div class="inner-box mb-4 d-flex flex-column justify-content-between align-items-center gap-4 rounded-4">
                         <div class="image">
                             <img src="./assets/imgs/testimonial-icon.png" alt="testimonial-icon">
                         </div>
@@ -288,7 +288,7 @@
             </div>
             <div class="row row-2">
                 <div class="block col-lg-4 col-md-6 col-12">
-                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                    <div class="content mb-4 rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
                         <h2>Starter</h2>
                         <div class="price d-flex flex-column justify-content-center align-items-center">
                             <h1 class="p-0 m-0">$ 14.50</h1>
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="block col-lg-4 col-md-6 col-12">
-                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                    <div class="content mb-4 rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
                         <h2>Premium</h2>
                         <div class="price d-flex flex-column justify-content-center align-items-center">
                             <h1 class="p-0 m-0">$ 21.50</h1>
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="block col-lg-4 col-md-6 col-12">
-                    <div class="content rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
+                    <div class="content mb-4 rounded-4 d-flex flex-column justify-content-center align-items-center gap-3">
                         <h2>Advanced</h2>
                         <div class="price d-flex flex-column justify-content-center align-items-center">
                             <h1 class="p-0 m-0">$ 42.00</h1>
@@ -349,25 +349,25 @@
     <section class="section-seven">
         <div class="container">
             <div class="row">
-                <div class="item col-lg-3 col-md-6 col-sm-12">
+                <div class="item mb-4 col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <h1 class="h1">163</h1>
                         <span>Projects</span>
                     </div>
                 </div>
-                <div class="item col-lg-3 col-md-6 col-sm-12">
+                <div class="item mb-4 col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <h1 class="h1">63</h1>
                         <span>Happy Clients</span>
                     </div>
                 </div>
-                <div class="item col-lg-3 col-md-6 col-sm-12">
+                <div class="item mb-4 col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <h1 class="h1">18</h1>
                         <span>Award Wins</span>
                     </div>
                 </div>
-                <div class="item col-lg-3 col-md-6 col-sm-12">
+                <div class="item mb-4 col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <h1 class="h1">27</h1>
                         <span>Countries</span>
@@ -390,9 +390,9 @@
             </div>
             <div class="row row-2">
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                    <div class="content mb-5 d-flex flex-column justify-content-center align-items-center gap-4 text-center">
                         <div class="image">
-                            <img src="./assets/imgs/blog-item-01.png" alt="blog-item-01">
+                            <img src="./assets/imgs/blog-item-01.png" alt="blog-item-01" class="object-fit-cover">
                         </div>
                         <h5 class="h5">Vivamus ac vehicula dui</h5>
                         <p>Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.</p>
@@ -400,9 +400,9 @@
                     </div>
                 </div>
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                    <div class="content mb-5 d-flex flex-column justify-content-center align-items-center gap-4 text-center">
                         <div class="image">
-                            <img src="./assets/imgs/blog-item-02.png" alt="blog-item-02">
+                            <img src="./assets/imgs/blog-item-02.png" alt="blog-item-02" class="object-fit-cover">
                         </div>
                         <h5 class="h5">Phasellus convallis augue</h5>
                         <p>Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac. Vestibulum finibus urna ut velit venenatis, vel ultrices sapien mattis.</p>
@@ -410,7 +410,7 @@
                     </div>
                 </div>
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="content d-flex flex-column justify-content-center align-items-center gap-4 text-center">
+                    <div class="content mb-5 d-flex flex-column justify-content-center align-items-center gap-4 text-center">
                         <div class="image">
                             <img src="./assets/imgs/blog-item-03.png" alt="blog-item-03">
                         </div>
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="row row-2">
-                <div class="col-lg-4">
+                <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="notice d-flex flex-column justify-content-between gap-4">
                         <h4 class="h4">keep in touch</h4>
                         <p>110-220 Quisque diam odio, maximus ac consectetur eu, 10260 auctor non lorem</p>
@@ -490,7 +490,7 @@
             </div>
             <div class="row copyright">
                 <div class="col-lg-12">
-                   <div class="content d-flex justify-content-center align-items-center pt-4 text-white">
+                   <div class="content d-flex justify-content-center align-items-center pt-4 text-white text-center">
                         <p class="copyright">Copyright &copy; 2025 tthphat space company: designed by https://github.com/tthphat</p>
                    </div>
                 </div>
