--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-expand-lg bg-white justify-content-between rounded-pill">
+                    <nav class="navbar navbar-expand-lg bg-white justify-content-between">
                         <a href="/" class="navbar-brand ps-4">
                             <img src="./assets/imgs/P-logo.png" alt="Logo" width="60"> TTHPHAT
                         </a>
